Added package.json, webpack and fix index.html and gitignore

--- a/resources/templates/web/index.html
+++ b/resources/templates/web/index.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge;IE=IE11;IE=10;IE=9;IE=8;">
         <link rel="manifest" href="static/manifest.json">
-        <link rel="stylesheet" type="text/css" href="static/lib/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="static/lib/bootstrap/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="static/lib/open-iconic/font/css/open-iconic-bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="static/css/base.css">
-        <link rel="stylesheet" href="static/lib/open-iconic/font/css/open-iconic-bootstrap.min.css"/>
-        <script type="text/javascript" src="static/lib/jquery.js"></script>
-        <script type="text/javascript" src="static/lib/popper.js"></script>
-        <script type="text/javascript" src="static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script type="text/javascript" src="static/lib/jquery/jquery.js"></script>
+        <script type="text/javascript" src="static/lib/popper/popper.js"></script>
+        <script type="text/javascript" src="static/lib/bootstrap/bootstrap.bundle.min.js"></script>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
