--- a/resources/templates/administrator/index.html
+++ b/resources/templates/administrator/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="static/css/administrator.css">
         <script type="text/javascript" src="static/lib/jquery/jquery.js"></script>
         <script type="text/javascript" src="static/lib/popper/popper.js"></script>
-        <script type="text/javascript" src="static/lib/bootstrap/bootstrap.bundle.min.js"></script>
+        <script type="text/javascript" src="static/lib/bootstrap/bootstrap.min.js"></script>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
