--- a/resources/templates/web/index.html
+++ b/resources/templates/web/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="static/css/base.css">
         <script type="text/javascript" src="static/lib/jquery/jquery.js"></script>
         <script type="text/javascript" src="static/lib/popper/popper.js"></script>
-        <script type="text/javascript" src="static/lib/bootstrap/bootstrap.min.js"></script>
+        <script type="text/javascript" src="static/lib/bootstrap/bootstrap.js"></script>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
